attemp to fix extra white space on mobile view (overflow-x:0)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,7 @@
     width: 100vw;
     height: 100vh;
     margin: 0px;
+    overflow-x: hidden;
 }
 
 .index-container{
